접속 코드를 이용해서 두 피어가 서로 접속하는 과정까지 구현

--- a/src/client/remo_client.dproj
+++ b/src/client/remo_client.dproj
@@ -107,6 +107,12 @@
             <Form>fmMain</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Core\Core.pas"/>
+        <DCCReference Include="Core\View.pas"/>
+        <DCCReference Include="..\..\lib\Core\ClientUnit.pas"/>
+        <DCCReference Include="..\..\lib\Core\ViewBase.pas"/>
+        <DCCReference Include="..\..\lib\Config.pas"/>
+        <DCCReference Include="..\..\lib\Global.pas"/>
         <DCCReference Include="..\..\lib\Protocols.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
