--- a/src/client/remo_client.dproj
+++ b/src/client/remo_client.dproj
@@ -114,6 +114,13 @@
         <DCCReference Include="..\..\lib\Config.pas"/>
         <DCCReference Include="..\..\lib\Global.pas"/>
         <DCCReference Include="..\..\lib\Protocols.pas"/>
+        <DCCReference Include="..\..\lib\Core\DeskZipUnit.pas"/>
+        <DCCReference Include="..\..\lib\Core\DeskUnZipUnit.pas"/>
+        <DCCReference Include="_frDeskScreen.pas">
+            <Form>frDeskScreen</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TFrame</DesignClass>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
