--- a/src/server/remo_server.dproj
+++ b/src/server/remo_server.dproj
@@ -114,6 +114,8 @@
         <DCCReference Include="..\..\lib\Core\ClientUnit.pas"/>
         <DCCReference Include="Core\Core.pas"/>
         <DCCReference Include="Core\View.pas"/>
+        <DCCReference Include="..\..\lib\Core\DeskZipUnit.pas"/>
+        <DCCReference Include="..\..\lib\Core\DeskUnZipUnit.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
