--- a/src/client/remo_client.dproj
+++ b/src/client/remo_client.dproj
@@ -113,7 +113,6 @@
         <DCCReference Include="..\..\lib\Core\ViewBase.pas"/>
         <DCCReference Include="..\..\lib\Config.pas"/>
         <DCCReference Include="..\..\lib\Global.pas"/>
-        <DCCReference Include="..\..\lib\Protocols.pas"/>
         <DCCReference Include="..\..\lib\Core\DeskZipUnit.pas"/>
         <DCCReference Include="..\..\lib\Core\DeskUnZipUnit.pas"/>
         <DCCReference Include="_frDeskScreen.pas">
@@ -121,6 +120,8 @@
             <FormType>dfm</FormType>
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
+        <DCCReference Include="..\..\lib\Core\ClientUnitInterface.pas"/>
+        <DCCReference Include="..\..\lib\Core\Protocols.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
