--- a/src/gateway/remo_gateway.dproj
+++ b/src/gateway/remo_gateway.dproj
@@ -5,7 +5,7 @@
         <FrameworkType>VCL</FrameworkType>
         <MainSource>remo_gateway.dpr</MainSource>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Debug</Config>
+        <Config Condition="'$(Config)'==''">Release</Config>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <TargetedPlatforms>1</TargetedPlatforms>
         <AppType>Application</AppType>
@@ -104,13 +104,13 @@
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
         <DCCReference Include="_fmMain.pas">
-            <Form>Form3</Form>
+            <Form>fmMain</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="ServerUnit.pas"/>
         <DCCReference Include="..\..\lib\Config.pas"/>
         <DCCReference Include="..\..\lib\Global.pas"/>
-        <DCCReference Include="..\..\lib\Protocols.pas"/>
+        <DCCReference Include="..\..\lib\Core\Protocols.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -137,7 +137,7 @@
                 </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="3">
-                <DeployFile LocalName="Win32\Debug\remo_gateway.exe" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="..\..\bin\remo_gateway.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>remo_gateway.exe</RemoteName>
                         <Overwrite>true</Overwrite>
