--- a/src/client/remo_client.dproj
+++ b/src/client/remo_client.dproj
@@ -5,7 +5,7 @@
         <FrameworkType>VCL</FrameworkType>
         <MainSource>remo_client.dpr</MainSource>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Release</Config>
+        <Config Condition="'$(Config)'==''">Debug</Config>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <TargetedPlatforms>1</TargetedPlatforms>
         <AppType>Application</AppType>
@@ -107,21 +107,16 @@
             <Form>fmMain</Form>
             <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="Core\Core.pas"/>
-        <DCCReference Include="Core\View.pas"/>
-        <DCCReference Include="..\..\lib\Core\ClientUnit.pas"/>
-        <DCCReference Include="..\..\lib\Core\ViewBase.pas"/>
         <DCCReference Include="..\..\lib\Config.pas"/>
         <DCCReference Include="..\..\lib\Global.pas"/>
-        <DCCReference Include="..\..\lib\Core\DeskZipUnit.pas"/>
         <DCCReference Include="..\..\lib\Core\DeskUnZipUnit.pas"/>
         <DCCReference Include="_frDeskScreen.pas">
             <Form>frDeskScreen</Form>
             <FormType>dfm</FormType>
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
-        <DCCReference Include="..\..\lib\Core\ClientUnitInterface.pas"/>
         <DCCReference Include="..\..\lib\Core\Protocols.pas"/>
+        <DCCReference Include="..\..\lib\RemoteClient.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -151,6 +146,12 @@
             </Delphi.Personality>
             <Deployment Version="3">
                 <DeployFile LocalName="..\..\bin\remo_client.exe" Configuration="Debug" Class="ProjectOutput">
+                    <Platform Name="Win32">
+                        <RemoteName>remo_client.exe</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="..\..\bin\remo_client.exe" Configuration="Release" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>remo_client.exe</RemoteName>
                         <Overwrite>true</Overwrite>
