클라이언트 프로그램 실행 파라메터 사용 기능 추가

--- a/src/gateway/remo_gateway.dproj
+++ b/src/gateway/remo_gateway.dproj
@@ -107,7 +107,7 @@
             <Form>fmMain</Form>
             <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="ServerUnit.pas"/>
+        <DCCReference Include="RemoteGateway.pas"/>
         <DCCReference Include="..\..\lib\Config.pas"/>
         <DCCReference Include="..\..\lib\Global.pas"/>
         <BuildConfiguration Include="Release">
